--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ios_picture_orientation_correction",
-  "version": "1.0.1",
+  "name": "ios-fix-rotate-img",
+  "version": "1.0.0",
   "description": "ios下input显示图片方向校正",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "akaziki",
+  "author": "gezhihao",
   "license": "ISC",
   "dependencies": {
     "exif-js": "^2.3.0"
